force-app/main/default/objects/IRPDKPI__c/IRPDKPI__c.object-meta.xml
<CustomObject>
    <label>IRPD KPI</label>
    <nameField>
        <label>IRPDKPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IRPD KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>