force-app/main/default/objects/IRPDKPI__c/fields/Checkout_Date__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Date__c</fullName>
    <label>Checkout Date</label>
    <type>Date</type>
</CustomField>