force-app/main/default/objects/IRPDKPI__c/fields/IRPD_Checkout__c.field-meta.xml
<CustomField>
    <fullName>IRPD_Checkout__c</fullName>
    <label>IRPD @ Checkout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>