force-app/main/default/objects/IRPDKPI__c/fields/Rental_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Rental_Contracts__c</fullName>
    <label>Rental Contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>